--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
 
     <footer>
         <p>this is the footer</p>
+        <ul>
+            <li>social media</li>
+            <li>copyright@dev-atm</li>
+        </ul>
     </footer>
 
 
