fix: changed the title

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DEV-ATM</title>
+    <title>#atmcodes</title>
 </head>
 <body>
-    <h1>@DEV-ATM</h1>
+    <h1>#atmcodes</h1>
     <p>Welcome to my portfolio site - </p>
     
     <hr>
